<resources>
    <string name="app_name">天语</string>

    <!--network -->
    <string name="request_fail">请求失败，请稍后再试</string>
    <string name="request_time_out_fail">网络连接超时，请稍后再试</string>
    <string name="request_connect_fail">网络连接错误，请检查您的网络是否正常</string>
    <string name="request_unknown_host_fail">请求失败，请检查您的网络是否正常</string>
    <string name="request_illegal_state_fail">请求失败，数据解析错误</string>
    <string name="request_server_busy_fail">服务器繁忙，请稍后再试</string>

    <!--status-->
    <string name="status_load_fail_reset">加载失败，点击重试</string>
    <string name="status_net_fail_reset">网络异常，点击重试</string>

    <!--refresh layout-->
    <string name="refresh_pull_down">下拉以刷新</string>
    <string name="refresh_pull_up">上拉加载更多</string>
    <string name="refresh_release_loading_more">放开加载更多</string>
    <string name="refresh_release_to_refresh">放开以刷新</string>
    <string name="refresh_loading">加载中&#8230;</string>

    <!--title-->
    <string name="title_url_fail">网址错误</string>
    <string name="title_register">注册</string>
    <string name="title_maintain_consult">保养咨询</string>
    <string name="title_my">个人中心</string>
    <string name="title_revise_password">修改密码</string>
    <string name="title_contacts">通讯录</string>
    <string name="title_setting">设置</string>
    <string name="title_forget_password">忘记密码</string>

    <!--dialog-->
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_affirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_register_success">恭喜您成为天语金融会员\n您的密码为身份证后六位</string>
    <string name="dialog_confirm_out_login">您确定要退出天语金融吗?</string>

    <!--loading-->
    <string name="load_msg">正在加载中&#8230;</string>
    <string name="load_login">正在登录中&#8230;</string>
    <string name="load_register">正在注册中&#8230;</string>
    <string name="load_update">正在修改中&#8230;</string>
    <string name="load_delete">正在删除中&#8230;</string>
    <string name="load_send_code">正在发送验证码&#8230;</string>
    <string name="load_clear_cache">正在清除缓存&#8230;</string>

    <!--hint-->
    <string name="hint_input_not_empty">输入的内容不能为空</string>
    <string name="hint_empty_data">暂无数据</string>

    <!--toast-->
    <string name="toast_load_fail">加载失败</string>
    <string name="toast_input_not_empty">输入的内容不能为空</string>
    <string name="toast_input_account">请输入账号</string>
    <string name="toast_input_password">请输入密码</string>
    <string name="toast_input_name">请输入您的真实姓名</string>
    <string name="toast_input_phone">请输入您的手机号</string>
    <string name="toast_input_id">请输入您的身份证号</string>
    <string name="toast_input_correct_phone">请输入正确的手机号</string>
    <string name="toast_input_correct_id">请输入正确的身份证号</string>
    <string name="toast_please_input_old_password">请输入旧密码</string>
    <string name="toast_please_input_new_password">请输入新密码</string>
    <string name="toast_please_again_input_new_password">请再次输入新密码</string>
    <string name="toast_clear_cache_success">清除缓存成功</string>


    <!--other-->
    <string name="rmb">¥</string>
    <string name="account">账号</string>
    <string name="please_input_account">请输入手机号/姓名/身份证</string>
    <string name="password">密码</string>
    <string name="please_input_id_6">请输入身份证后六位</string>
    <string name="login">登录</string>
    <string name="now_register">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_phone">请输入您的手机号</string>
    <string name="phone">手机号</string>
    <string name="register">注册</string>
    <string name="name">真实姓名</string>
    <string name="please_input_name">请输入您的真实姓名</string>
    <string name="id">身份证号</string>
    <string name="please_input_id">请输入您的身份证号</string>
    <string name="register_hint">点击注册既表示接收天语汽车金融的《用户协议》</string>
    <string name="contacts_hint">点击联系人邀请好友参加天语汽车金融</string>
    <string name="affirm_revise">确认修改</string>
    <string name="old_password">旧密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_new_password">请输入您的新密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="please_again_input_new_password">请再次输入您的新密码</string>
    <string name="please_input_register_phone">请输入注册的手机号</string>
    <string name="please_input_register_name">请输入注册的真实姓名</string>
    <string name="please_input_register_id">请输入注册的身份证号</string>
    <string name="affirm_alter">确认修改</string>
</resources>
